TestCases/Errors/threaded_movement/observations/win_09_obs.spm
 obs   14-5   0.000461435705690651 
 obs   15-5   0.000278815487696841 
 obs   16-5   0.000112930547713156 
 obs   14-6   0.000316572900940361 
 obs   15-6   9.99047362276464e-05 
 obs   16-6   0.000121670901225944 
 obs   14-7   8.41184387617766e-05 
 obs   15-7   0 
 obs   14-8   0.000499458572622204 
 obs   14-9   0.000336360578540195 
 obs   13-10   0.000476190476190476 
 obs   14-10   0.000654761904761905 
 obs   3-11   0.006 
 obs   4-11   0.0141666666666667 
 obs   5-11   0.000806451612903226 
 obs   4-12   0.0160710653445207 
 obs   3-13   0.0223636363636364 
 obs   4-13   0.0233333333333333 
 obs   5-13   0.0211541739635966 
 obs   5-14   0.0154556760850319 
 obs   5-15   0.021573140926207 
 obs   6-15   0.0238099862323593 
 obs   6-16   0.0490462962962963 
 obs   7-17   0.0189263673072447 
 obs   8-17   0.0190963366698661 
 obs   7-18   0.0052755376344086 
 obs   8-18   0.0229405202640497 
 obs   9-18   0.0237847222222222 
 obs   7-19   0.00851593700335339 
 obs   8-19   0.00620905549586145 
 obs   9-19   0.0323888888888889 
 obs   8-20   0.00897061811654389 
 error_value   14-5   0 
 error_value   15-5   0 
 error_value   16-5   0 
 error_value   14-6   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   14-7   0 
 error_value   15-7   0 
 error_value   14-8   0 
 error_value   14-9   0 
 error_value   13-10   0 
 error_value   14-10   0 
 error_value   3-11   0 
 error_value   4-11   0 
 error_value   5-11   0 
 error_value   4-12   0 
 error_value   3-13   0 
 error_value   4-13   0 
 error_value   5-13   0 
 error_value   5-14   0 
 error_value   5-15   0 
 error_value   6-15   0 
 error_value   6-16   0 
 error_value   7-17   0 
 error_value   8-17   0 
 error_value   7-18   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   7-19   0 
 error_value   8-19   0 
 error_value   9-19   0 
 error_value   8-20   0 
